# energydesk-python-sdk

./: README.md  requirements.txt  setup.cfg
docs/: conf.py  energydesk.api.assets.rst  energydesk.api.curves.rst  energydesk.api.customers.rst  energydesk.api.flexibility.rst  energydesk.api.marketdata.rst  energydesk.api.rst  energydesk.rst  energydesk.sdk.rst  energydeskapi.assetdata.calculations.rst  energydeskapi.assetdata.rst  energydeskapi.assets.rst  energydeskapi.auth.rst  energydeskapi.bilateral.rst  energydeskapi.clearing.rst  energydeskapi.contracts.rst  energydeskapi.conversions.rst  energydeskapi.counterparts.rst  energydeskapi.creditrisk.dataclasses.rst  energydeskapi.creditrisk.rst  energydeskapi.curves.rst  energydeskapi.customers.rst  energydeskapi.energydesk.rst  energydeskapi.events.rst  energydeskapi.examples.rst  energydeskapi.flexibility.rst  energydeskapi.geolocation.rst  energydeskapi.gos.rst  energydeskapi.graph.rst  energydeskapi.lems.rst  energydeskapi.marketdata.rst  energydeskapi.moneymarkets.rst  energydeskapi.necs.rst  energydeskapi.pdfgenerator.rst  energydeskapi.portfolios.rst  energydeskapi.pricing.rst  energydeskapi.profiles.rst  energydeskapi.risk.rst  energydeskapi.rst  energydeskapi.scheduler.rst  (+6 more)
energydeskapi/assetdata/: assetdata_api.py  baselines_api.py  baselines_utils.py
energydeskapi/assets/: asset_groups_api.py  assetdata_api.py  assetgroup_utils.py  assetowners_api.py  assets_api.py
energydeskapi/audit/: audit_log_api.py
energydeskapi/auth/: rauth_sample.py
energydeskapi/bilateral/: bilateral_api.py  capacity_api.py  (+3 more)
(+194 files in other folders)
