[metadata]
name = energydesk-python-sdk
version = 1.2.0
description = SDK with examples on how to access the EnergyDesk REST API
long_description = file: README.rst
url = https://springboard.energy/
author = Steinar Rune Eriksen
author_email = steinar@springboard.energy


[options]
include_package_data = true
packages = find: